--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Simple Calculator</title>
+    <link rel="icon" href="https://www.bing.com/th?id=OIP.a12hluhhWTV4Gdt-GNkPFgHaHa&w=82&h=88&c=8&rs=1&qlt=70&o=6&dpr=1.3&pid=3.1&rm=2" type="image/x-icon">
+    <link rel="shortcut icon" href="https://www.bing.com/th?id=OIP.a12hluhhWTV4Gdt-GNkPFgHaHa&w=82&h=88&c=8&rs=1&qlt=70&o=6&dpr=1.3&pid=3.1&rm=2" type="image/x-icon">
+  <title> Equation </title>
 </head>
 <body>
   <div class="calculator">
